--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     dependencies {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
     }
 
     repositories {
@@ -15,3 +16,4 @@ targetCompatibility = '1.8'
 
 apply from: "$projectDir/gradle/dependencies.gradle"
 apply from: "$projectDir/gradle/distribution.gradle"
+apply from: "$projectDir/gradle/testCoverage.gradle"
